recursion.lessons.recursion.koch.Koch.scala.error
Koch:5: error: not found: value snowSide
snowSide(levels-1, length/3);
^Koch:9: error: not found: value snowSide
snowSide(levels-1, length/3);
^Koch:12: error: not found: value snowSide
snowSide(levels-1, length/3);
^