recursion.lessons.recursion.koch.Koch.scala.code


def snowFlake (levels:Int, length:Double) {
snowSide(levels-1, length/3);
avance(length);
right(120);
setColor(Color.blue);
snowSide(levels-1, length/3);
right(120);
setColor(Color.orange);
snowSide(levels-1, length/3);
right(120);
}